--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ai-image-gen",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.html",
   "scripts": {
     "start": "node index",
     "dev": "nodemon index"
